# nostromo-n50

./: CMakeLists.txt  Makefile.in  README  configure  configure.ac  nostromo_n50-1.4.1.kdev4
.kdev4/: nostromo_n50-1.4.1.kdev4
doc/: CMakeLists.txt  Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  daemon.cxx  ui_support.cxx
